WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129460
Web Inspector model tests load wrong inspector page under WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=129460
Summary
Web Inspector model tests load wrong inspector page under WebKitTestRunner
Blaze Burg
Reported
2014-02-27 16:28:50 PST
From failure:
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r164830%20(3577)/inspector/test-harness-trivially-works-pretty-diff.html
Somehow WK2 is not pulling the right inspector page.
Attachments
the patch
(3.39 KB, patch)
2014-03-02 18:54 PST
,
Blaze Burg
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2014-03-02 18:54:36 PST
Created
attachment 225625
[details]
the patch
mitz
Comment 2
2014-03-02 19:07:57 PST
Comment on
attachment 225625
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225625&action=review
> Tools/WebKitTestRunner/TestInvocation.cpp:231 > + goto end;
Extra whitespace here at the end.
Blaze Burg
Comment 3
2014-03-02 19:37:05 PST
Committed
r164966
: <
http://trac.webkit.org/changeset/164966
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug