Web Inspector model tests load wrong inspector page under WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=129460

Reviewed by Dan Bernstein.

Tools:

Don't unconditionally open the inspector before running an inspector test.
Instead, the test should request that the inspector open when it's ready.

This change was lost during a rebase, but is the same change made to
DumpRenderTree.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::invoke):

LayoutTests:

Stop skipping inspector/test-harness-trivially-works.html.

* platform/wk2/TestExpectations:

Canonical link: https://commits.webkit.org/147646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164966 268f45cc-cd09-0410-ab3c-d52691b4dbfc