Tools/WebKitTestRunner/TestInvocation.cpp
@@ -139,13 +139,6 @@ static bool shouldLogFrameLoadDelegates(const char* pathOrURL)
     return strstr(pathOrURL, "loading/");
 }
 
-#if ENABLE(INSPECTOR) && !PLATFORM(IOS)
-static bool shouldOpenWebInspector(const char* pathOrURL)
-{
-    return strstr(pathOrURL, "inspector/") || strstr(pathOrURL, "inspector\\");
-}
-#endif
-
 #if PLATFORM(COCOA)
 static bool shouldUseThreadedScrolling(const char* pathOrURL)
 {
@@ -236,11 +229,6 @@ void TestInvocation::invoke()
     }
     if (m_error)
         goto end;
-
-#if ENABLE(INSPECTOR) && !PLATFORM(IOS)
-    if (shouldOpenWebInspector(m_pathOrURL.c_str()))
-        WKInspectorShow(WKPageGetInspector(TestController::shared().mainWebView()->page()));
-#endif // ENABLE(INSPECTOR)        
 
     WKPageLoadURL(TestController::shared().mainWebView()->page(), m_url.get());
 
